Decent layout so far

--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" type="text/css" media="screen" href="style.css">
-    <title>Document</title>
+    <title>Blog Home</title>
 </head>
 <body>
+    <div class = "container">
+        <header id="navbar">
+            <p id="navbar_subscribe">Subscribe</p>
+            <h2 id="navbar_title">Blog Title</h2>
+            <img id="navbar_srchButton" src="search.jpg" width="30" height="30">
+        </header>
+
+        <div class = "blogList">
+            <article class="blogList_card">
+                <p class="card_world">World</p>
+                <h3 class="card_title">Example Blog Post</h3>
+                <p class="card_date">Nov 12</p>
+                <p class="card_description">This card represents an example blog post</p>
+            </article>
+        </div>
+
+    </div>
     
 </body>
 </html>
