Multiple cards wrap

--- a/index.html
+++ b/index.html
@@ -16,12 +16,47 @@
         </header>
 
         <div class = "blogList">
+
             <article class="blogList_card">
                 <p class="card_world">World</p>
                 <h3 class="card_title">Example Blog Post</h3>
                 <p class="card_date">Nov 12</p>
                 <p class="card_description">This card represents an example blog post</p>
+                <br>
+                <br>
+                <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
+       
+            <article class="blogList_card">
+                <p class="card_design">Design</p>
+                <h3 class="card_title">Post Title</h3>
+                <p class="card_date">Nov 11</p>
+                <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br>
+                <br>
+                <a class="card_blogLink" href="blogPost.html">Continue reading</a>
+            </article>
+
+            <article class="blogList_card">
+                <p class="card_world">World</p>
+                <h3 class="card_title">Post Title</h3>
+                <p class="card_date">Nov 11</p>
+                <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br>
+                <br>
+                <a class="card_blogLink" href="blogPost.html">Continue reading</a>
+            </article>
+
+            <article class="blogList_card">
+                <p class="card_design">Design</p>
+                <h3 class="card_title">Post Title</h3>
+                <p class="card_date">Nov 11</p>
+                <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br>
+                <br>
+                <a class="card_blogLink" href="blogPost.html">Continue reading</a>
+            </article>
+       
         </div>
 
     </div>
