--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header id="navbar">
             <p id="navbar_subscribe">Subscribe</p>
             <h2 id="navbar_title">Blog Title</h2>
-            <img id="navbar_srchButton" src="search.jpg" width="30" height="30">
+            <img id="navbar_srchButton" src="images/search.jpg" width="30" height="30">
         </header>
 
         <div class = "blogList">
@@ -22,6 +22,7 @@
                 <h3 class="card_title">Example Blog Post</h3>
                 <p class="card_date">Nov 12</p>
                 <p class="card_description">This card represents an example blog post</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
        
@@ -30,6 +31,7 @@
                 <h3 class="card_title">Post Title</h3>
                 <p class="card_date">Nov 11</p>
                 <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
 
@@ -38,6 +40,7 @@
                 <h3 class="card_title">Post Title</h3>
                 <p class="card_date">Nov 11</p>
                 <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
 
@@ -46,6 +49,7 @@
                 <h3 class="card_title">Post Title</h3>
                 <p class="card_date">Nov 11</p>
                 <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
 
@@ -54,6 +58,7 @@
                 <h3 class="card_title">Post Title</h3>
                 <p class="card_date">Nov 11</p>
                 <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
 
@@ -63,6 +68,7 @@
                 <h3 class="card_title">Post Title</h3>
                 <p class="card_date">Nov 11</p>
                 <p class="card_description">Here is another card for another blog post. You can click below to keep reading</p>
+                <br><br>
                 <a class="card_blogLink" href="blogPost.html">Continue reading</a>
             </article>
        
