--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "container">
-        <header id="navbar">
+        <header id="container_navbar">
             <p id="navbar_subscribe">Subscribe</p>
             <h2 id="navbar_title">Blog Title</h2>
             <img id="navbar_srchButton" src="images/search.jpg" width="30" height="30">
@@ -75,6 +75,6 @@
         </div>
 
     </div>
-    
+
 </body>
 </html>
