Started blog page + other changes

--- a/blogPost.html
+++ b/blogPost.html
@@ -8,6 +8,34 @@
     <link rel = "stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
-    blog
+    <header id="container_navbar">
+        <p id="navbar_subscribe">Subscribe</p>
+        <h2 id="navbar_title">Blog Title</h2>
+        <img id="navbar_srchButton" src="resources/search.jpg" width="30" height="30">
+    </header>
+
+    <div class="blog_container">
+        <div class="container_blogCol">
+            <h3 class="blog_title">Sample Blog Post</h3>
+            <span>May 20, 2022 by</span>
+            <span class="blog_author"> John Taulane</span>
+            <div class="blog_body">
+                <div class="body_intro">
+                    This is a basic blog to show off what I have learned about HTML and CSS. It follows the rubric that was shared
+                    <a href="resources/Project1.pdf" target="_blank"> here</a>. I hope you enjoy reading the rest of this blog.
+                </div>
+            
+            </div>
+        </div>
+
+        <div class="container_otherCol">
+            yo
+        </div>
+
+
+
+
+    </div>
+
 </body>
 </html>
