--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header id="container_navbar">
             <p id="navbar_subscribe">Subscribe</p>
             <h2 id="navbar_title">Blog Title</h2>
-            <img id="navbar_srchButton" src="images/search.jpg" width="30" height="30">
+            <img id="navbar_srchButton" src="resources/search.jpg" width="30" height="30">
         </header>
 
         <div class = "blogList">
