More to blog body

--- a/blogPost.html
+++ b/blogPost.html
@@ -19,13 +19,42 @@
             <h3 class="blog_title">Sample Blog Post</h3>
             <span>May 20, 2022 by</span>
             <span class="blog_author"> John Taulane</span>
+
             <div class="blog_body">
                 <div class="body_intro">
                     This is a basic blog to show off what I have learned about HTML and CSS. It follows the rubric that was shared
                     <a href="resources/Project1.pdf" target="_blank"> here</a>. I hope you enjoy reading the rest of this blog.
                 </div>
+                <div class="body_subSection">
+                    <h2 class="">Sub-Heading</h2>
+                    <p>Lorem ipsum dolor sit amet. I into love the looked piña our half wasn't. Not that mean
+                        But me think we'll I tape
+                        At food
+                        I the looked bad
+                        Yes cut gettin' yoga
+                        If. I brain
+                        If like got like red mean
+                        But gettin' a half thought am have that.Got piña love bar looked into a love. The through caught the meet O'Malley's
+                        Where not tape
+                        At gettin' not we'll tomorrow I'm midnight
+                        In wrote my food
+                        I health to caught ad
+                        And. At into piña not rain
+                        If have I have about. At piña though and midnight
+                        In escape old have rain
+                        If the think wasn't and fallen midnight
+                        In a caught into if mean
+                        But like. Me called poet
+                        I I'm brain
+                        If love at like health by health dull in like think. You thought like at piña we'll my that wrote all escape like. I'm ad
+                        And piña a plan bad
+                        Yes you personal piña the mean
+                        But sounds it champagne
+                        I've called old fallen you've on escape kinda. </p>
+                </div>
             
             </div>
+
         </div>
 
         <div class="container_otherCol">
