--- a/blogPost.html
+++ b/blogPost.html
@@ -58,7 +58,14 @@
         </div>
 
         <div class="container_otherCol">
-            yo
+            <div class="about_box">
+                <h3>ABOUT</h3>
+                <p>John Taulane is a 22 year old from the Philadelphia area. He enjoys writing in his free time
+                     as well as coding, exercising, and watching basketball and soccer. If you enjoy his
+                     writing press subscribe in the top left corner.</p>
+            </div>
+
+            
         </div>
 
 
