Added more to body of blog page

--- a/blogPost.html
+++ b/blogPost.html
@@ -26,7 +26,7 @@
                     <a href="resources/Project1.pdf" target="_blank"> here</a>. I hope you enjoy reading the rest of this blog.
                 </div>
                 <div class="body_subSection">
-                    <h2 class="">Sub-Heading</h2>
+                    <h2>Sub-Heading</h2>
                     <p>Lorem ipsum dolor sit amet. I into love the looked piña our half wasn't. Not that mean
                         But me think we'll I tape
                         At food
@@ -51,6 +51,18 @@
                         Yes you personal piña the mean
                         But sounds it champagne
                         I've called old fallen you've on escape kinda. </p>
+                </div>
+                <div class="body_subSection">
+                    <h2>Sub-Heading</h2>
+                    <p>Here's an example of how to print out <b>"Hello World"</b> to the console using javascript</p>
+                    <div class="codeBox">
+                        <code>console.log("Hello World!")</code>
+                    </div>
+                    <p>Here's an example of how to print out the type of a variable to the console</p>
+                    <div class="codeBox">
+                        <code>console.log(typeof 42) <br> console.log(typeof true)</code>
+                    </div>
+                    <p>This would print out<br><i>number</i><br><i>boolean</i></p>
                 </div>
             
             </div>
@@ -85,6 +97,23 @@
                     </li>
                     <li>
                         <a href="index.html">December 2021</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="socials">
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/john-taulane/">LinkedIn</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/jbt10699/5-20-Coding-Assignment">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/">YouTube</a>
+                    </li>
+                    <li>
+                        <a href="mailto:jbt10699@gmail.com">Send me an email!</a>
                     </li>
                 </ul>
             </div>
