Added poem section to blog

--- a/blogPost.html
+++ b/blogPost.html
@@ -64,6 +64,24 @@
                     </div>
                     <p>This would print out<br><i>number</i><br><i>boolean</i></p>
                 </div>
+
+                <div class="body_subScetion">
+                    <h2>Closing</h2>
+                    <p>
+                        Here's the end of my blog. I truly hope you enjoyed reading it. I will end with a poem.<br><br>
+                    </p>
+                    <p class="body_poem"> 
+                        Leucon, no one's allowed to know his fate,<br>
+                        Not you, not me: don't ask, don't hunt for answers<br>
+                        In tea leaves or palms. Be patient with whatever comes.<br>
+                        This could be our last winter, it could be many<br>
+                        More, pounding the Tuscan Sea on these rocks:<br>
+                        Do what you must, be wise, cut your vines<br>
+                        And forget about hope. Time goes running, even<br>
+                        As we talk. Take the present, the future's no one's affair.<br>
+                    </p>
+
+                </div>
             
             </div>
 
@@ -102,6 +120,7 @@
             </div>
 
             <div class="socials">
+                <h3>Socials</h3>
                 <ul>
                     <li>
                         <a href="https://www.linkedin.com/in/john-taulane/">LinkedIn</a>
