Change page buttons

--- a/blogPost.html
+++ b/blogPost.html
@@ -80,7 +80,11 @@
                         And forget about hope. Time goes running, even<br>
                         As we talk. Take the present, the future's no one's affair.<br>
                     </p>
+                </div>
 
+                <div class="body_buttonRow">
+                    <button class="body_olderBtn">Older Post</button>
+                    <button class="body_newerBtn">Newer Post</button>
                 </div>
             
             </div>
