Added image to sidebar

--- a/blogPost.html
+++ b/blogPost.html
@@ -91,7 +91,7 @@
 
         </div>
 
-        <div class="container_otherCol">
+        <div class="container_sideBar">
             <div class="about_box">
                 <h3>ABOUT</h3>
                 <p>John Taulane is a 22 year old from the Philadelphia area. He enjoys writing in his free time
@@ -141,9 +141,11 @@
                 </ul>
             </div>
 
+            <div class="blogImg">
+                <img src="resources/blog.jpg" width="50%">
+            </div>
+
         </div>
-
-
 
 
     </div>
